--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </header>
     <section>
         <h2>Tentang Saya</h2>
-        <p>Saya seorang web developer pemula.</p>
+        <p>Saya Seorang Mahasiswa Universitas Lampung Angkatan 2024, Fakulitas Keguruan dan Ilmu Pendidikan, Jurusan Pendidikan Matematika dan Ilmu Pengetahuan Alam, Program Studi Pendidikan Teknologi Informasi.</p>
     </section>
 </body>
 </html>
