--- a/forum.html
+++ b/forum.html
@@ -14,6 +14,10 @@
         }
         
         body {
+            <!-- Tambahkan di bagian atas body forum.html (setelah opening <body>) -->
+<a href="index.html" style="display: inline-block; margin: 20px; padding: 10px 15px; background: #3498db; color: white; text-decoration: none; border-radius: 5px;">
+    <i class="fas fa-arrow-left"></i> Kembali ke Profil
+</a>
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: #f5f7fa;
             margin: 0;
