--- a/index.html
+++ b/index.html
@@ -1,58 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deni Nugraha Solihin - 2413025071</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <title>Pengumpulan Tugas YouTube</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        h1 {
+            color: #FF0000;
+            text-align: center;
+        }
+        .tugas {
+            background: #f9f9f9;
+            border-left: 4px solid #FF0000;
+            padding: 10px 15px;
+            margin-bottom: 15px;
+        }
+        .link {
+            display: block;
+            background: #FF0000;
+            color: white;
+            padding: 8px;
+            text-align: center;
+            text-decoration: none;
+            border-radius: 4px;
+            margin-top: 8px;
+        }
+        .link:hover {
+            background: #CC0000;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <div class="profile-container">
-            <img src="images/profile.jpg" alt="Deni Nugraha Solihin" class="profile-img">
-            <h1>Deni Nugraha Solihin</h1>
-            <p>NIM: 2413025071</p>
-        </div>
-    </header>
+    <h1>Pengumpulan Tugas YouTube</h1>
+    <p>Nama: [Nama Lengkap]<br>
+    NIM: [Nomor Induk Mahasiswa]<br>
+    Kelas: [Nama Kelas]</p>
 
-    <main>
-        <section class="about">
-            <h2>Tentang Saya</h2>
-            <p>Halo! Saya Deni Nugraha Solihin, mahasiswa [Nama Universitas/Institusi]. Ini adalah halaman profil sederhana saya.</p>
-        </section>
+    <div class="tugas">
+        <h3>Tugas 1</h3>
+        <p>Deskripsi: [Deskripsi singkat tugas]</p>
+        <a href="https://youtu.be/[link1]" class="link" target="_blank">Link YouTube Tugas 1</a>
+    </div>
 
-        <section class="education">
-            <h2>Pendidikan</h2>
-            <ul>
-                <li>[Nama Sekolah/Universitas] - [Tahun]</li>
-                <li>[Nama Sekolah/Universitas] - [Tahun]</li>
-            </ul>
-        </section>
+    <div class="tugas">
+        <h3>Tugas 2</h3>
+        <p>Deskripsi: [Deskripsi singkat tugas]</p>
+        <a href="https://youtu.be/[link2]" class="link" target="_blank">Link YouTube Tugas 2</a>
+    </div>
 
-        <section class="skills">
-            <h2>Kemampuan</h2>
-            <div class="skills-container">
-                <div class="skill">HTML</div>
-                <div class="skill">CSS</div>
-                <div class="skill">JavaScript</div>
-                <!-- Tambahkan skill lainnya -->
-            </div>
-        </section>
+    <div class="tugas">
+        <h3>Tugas 3</h3>
+        <p>Deskripsi: [Deskripsi singkat tugas]</p>
+        <a href="https://youtu.be/[link3]" class="link" target="_blank">Link YouTube Tugas 3</a>
+    </div>
 
-        <section class="contact">
-            <h2>Kontak</h2>
-            <div class="social-links">
-                <a href="#"><i class="fab fa-github"></i> GitHub</a>
-                <a href="#"><i class="fab fa-linkedin"></i> LinkedIn</a>
-                <a href="#"><i class="fab fa-instagram"></i> Instagram</a>
-                <a href="mailto:email@example.com"><i class="fas fa-envelope"></i> Email</a>
-            </div>
-        </section>
-    </main>
+    <div class="tugas">
+        <h3>Tugas 4</h3>
+        <p>Deskripsi: [Deskripsi singkat tugas]</p>
+        <a href="https://youtu.be/[link4]" class="link" target="_blank">Link YouTube Tugas 4</a>
+    </div>
 
-    <footer>
-        <p>&copy; 2023 Deni Nugraha Solihin. All rights reserved.</p>
+    <div class="tugas">
+        <h3>Tugas 5</h3>
+        <p>Deskripsi: [Deskripsi singkat tugas]</p>
+        <a href="https://youtu.be/[link5]" class="link" target="_blank">Link YouTube Tugas 5</a>
+    </div>
+
+    <div class="tugas">
+        <h3>Tugas 6</h3>
+        <p>Deskripsi: [Deskripsi singkat tugas]</p>
+        <a href="https://youtu.be/[link6]" class="link" target="_blank">Link YouTube Tugas 6</a>
+    </div>
+
+    <footer style="text-align: center; margin-top: 30px; color: #666;">
+        <p>&copy; 2023 [Nama Anda]</p>
     </footer>
 </body>
 </html>
