--- a/index.html
+++ b/index.html
@@ -3,138 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profil & Pengumpulan Tugas</title>
+    <title>Pengumpulan Tugas YouTube</title>
     <style>
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: Arial, sans-serif;
             line-height: 1.6;
             max-width: 800px;
             margin: 0 auto;
             padding: 20px;
-            color: #333;
-        }
-        header {
-            text-align: center;
-            margin-bottom: 30px;
-        }
-        .profile {
-            display: flex;
-            align-items: center;
-            gap: 20px;
-            margin-bottom: 30px;
-            background: #f5f5f5;
-            padding: 20px;
-            border-radius: 8px;
-        }
-        .profile-img {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            object-fit: cover;
-            border: 4px solid #FF0000;
-        }
-        .profile-text {
-            flex: 1;
         }
         h1 {
             color: #FF0000;
-            margin-top: 0;
+            text-align: center;
         }
         .tugas {
             background: #f9f9f9;
             border-left: 4px solid #FF0000;
-            padding: 15px;
+            padding: 10px 15px;
             margin-bottom: 15px;
-            border-radius: 0 8px 8px 0;
         }
         .link {
-            display: inline-block;
+            display: block;
             background: #FF0000;
             color: white;
-            padding: 8px 15px;
+            padding: 8px;
+            text-align: center;
             text-decoration: none;
             border-radius: 4px;
             margin-top: 8px;
-            font-weight: bold;
         }
         .link:hover {
             background: #CC0000;
         }
-        footer {
-            text-align: center;
-            margin-top: 40px;
-            padding-top: 20px;
-            border-top: 1px solid #eee;
-            color: #666;
-        }
     </style>
 </head>
 <body>
-    <header>
-        <h1>Profil Mahasiswa</h1>
-    </header>
-
-    <div class="profile">
-        <img src="https://via.placeholder.com/150" alt="Foto Profil" class="profile-img">
-        <div class="profile-text">
-            <h2>[Nama Lengkap]</h2>
-            <p><strong>NIM:</strong> [Nomor Induk Mahasiswa]</p>
-            <p><strong>Kelas:</strong> [Nama Kelas]</p>
-            <p><strong>Program Studi:</strong> [Nama Prodi]</p>
-            <p><strong>Universitas:</strong> [Nama Universitas]</p>
-            <p>Halo! Saya [Nama Panggilan], mahasiswa [Nama Prodi] di [Nama Universitas]. 
-            Saya memiliki minat di bidang [sebutkan minat/keterampilan utama]. 
-            Tujuan saya mengikuti perkuliahan ini adalah [jelaskan tujuan singkat].</p>
-        </div>
-    </div>
-
-    <h2 style="color: #FF0000;">Daftar Tugas YouTube</h2>
+    <h1>Pengumpulan Tugas YouTube</h1>
+    <p>Nama: [Nama Lengkap]<br>
+    NIM: [Nomor Induk Mahasiswa]<br>
+    Kelas: [Nama Kelas]</p>
 
     <div class="tugas">
-        <h3>Tugas 1: [Judul Tugas]</h3>
-        <p><strong>Deskripsi:</strong> [Penjelasan singkat tentang tugas dan materi]</p>
-        <p><strong>Deadline:</strong> [Tanggal pengumpulan]</p>
-        <a href="https://youtu.be/[link1]" class="link" target="_blank">▶ Tonton di YouTube</a>
+        <h3>Tugas 1</h3>
+        <p>Deskripsi: [Deskripsi singkat tugas]</p>
+        <a href="https://youtu.be/[link1]" class="link" target="_blank">Link YouTube Tugas 1</a>
     </div>
 
     <div class="tugas">
-        <h3>Tugas 2: [Judul Tugas]</h3>
-        <p><strong>Deskripsi:</strong> [Penjelasan singkat tentang tugas dan materi]</p>
-        <p><strong>Deadline:</strong> [Tanggal pengumpulan]</p>
-        <a href="https://youtu.be/[link2]" class="link" target="_blank">▶ Tonton di YouTube</a>
+        <h3>Tugas 2</h3>
+        <p>Deskripsi: [Deskripsi singkat tugas]</p>
+        <a href="https://youtu.be/[link2]" class="link" target="_blank">Link YouTube Tugas 2</a>
     </div>
 
     <div class="tugas">
-        <h3>Tugas 3: [Judul Tugas]</h3>
-        <p><strong>Deskripsi:</strong> [Penjelasan singkat tentang tugas dan materi]</p>
-        <p><strong>Deadline:</strong> [Tanggal pengumpulan]</p>
-        <a href="https://youtu.be/[link3]" class="link" target="_blank">▶ Tonton di YouTube</a>
+        <h3>Tugas 3</h3>
+        <p>Deskripsi: [Deskripsi singkat tugas]</p>
+        <a href="https://youtu.be/[link3]" class="link" target="_blank">Link YouTube Tugas 3</a>
     </div>
 
     <div class="tugas">
-        <h3>Tugas 4: [Judul Tugas]</h3>
-        <p><strong>Deskripsi:</strong> [Penjelasan singkat tentang tugas dan materi]</p>
-        <p><strong>Deadline:</strong> [Tanggal pengumpulan]</p>
-        <a href="https://youtu.be/[link4]" class="link" target="_blank">▶ Tonton di YouTube</a>
+        <h3>Tugas 4</h3>
+        <p>Deskripsi: [Deskripsi singkat tugas]</p>
+        <a href="https://youtu.be/[link4]" class="link" target="_blank">Link YouTube Tugas 4</a>
     </div>
 
     <div class="tugas">
-        <h3>Tugas 5: [Judul Tugas]</h3>
-        <p><strong>Deskripsi:</strong> [Penjelasan singkat tentang tugas dan materi]</p>
-        <p><strong>Deadline:</strong> [Tanggal pengumpulan]</p>
-        <a href="https://youtu.be/[link5]" class="link" target="_blank">▶ Tonton di YouTube</a>
+        <h3>Tugas 5</h3>
+        <p>Deskripsi: [Deskripsi singkat tugas]</p>
+        <a href="https://youtu.be/[link5]" class="link" target="_blank">Link YouTube Tugas 5</a>
     </div>
 
     <div class="tugas">
-        <h3>Tugas 6: [Judul Tugas]</h3>
-        <p><strong>Deskripsi:</strong> [Penjelasan singkat tentang tugas dan materi]</p>
-        <p><strong>Deadline:</strong> [Tanggal pengumpulan]</p>
-        <a href="https://youtu.be/[link6]" class="link" target="_blank">▶ Tonton di YouTube</a>
+        <h3>Tugas 6</h3>
+        <p>Deskripsi: [Deskripsi singkat tugas]</p>
+        <a href="https://youtu.be/[link6]" class="link" target="_blank">Link YouTube Tugas 6</a>
     </div>
 
-    <footer>
-        <p>&copy; 2023 [Nama Anda] - Pengumpulan Tugas Mata Kuliah [Nama Matkul]</p>
-        <p>Kontak: [email@anda.com] | [Nomor Telepon]</p>
+    <footer style="text-align: center; margin-top: 30px; color: #666;">
+        <p>&copy; 2023 [Nama Anda]</p>
     </footer>
 </body>
 </html>
