--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
+<html>
+<head>
+    <title>Portofolio Saya</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <img src="foto-profil.jpg" alt="Foto Saya" width="150">
+    </header>
+    <section>
+        <h2>Tentang Saya</h2>
+        <p>Saya seorang web developer pemula.</p>
+    </section>
+</body>
+</html>
+<!DOCTYPE html>
 <html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pengumpulan Tugas YouTube</title>
+    <title>Pengumpulan Tugas</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -39,9 +55,9 @@
 </head>
 <body>
     <h1>Pengumpulan Tugas YouTube</h1>
-    <p>Nama: [Nama Lengkap]<br>
-    NIM: [Nomor Induk Mahasiswa]<br>
-    Kelas: [Nama Kelas]</p>
+    <p>Nama: Deni Nugraha Solihin<br>
+    NPM: 2413025071<br>
+    Kelas: PTI 2024 A</p>
 
     <div class="tugas">
         <h3>Tugas 1</h3>
