--- a/index.html
+++ b/index.html
@@ -1,25 +1,9 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>Portofolio Saya</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <img src="foto-profil.jpg" alt="Foto Saya" width="150">
-    </header>
-    <section>
-        <h2>Tentang Saya</h2>
-        <p>Saya seorang web developer pemula.</p>
-    </section>
-</body>
-</html>
-<!DOCTYPE html>
 <html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pengumpulan Tugas</title>
+    <title>Portofolio dan Pengumpulan Tugas YouTube</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -51,49 +35,77 @@
         .link:hover {
             background: #CC0000;
         }
+        header {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+        header img {
+            border-radius: 50%;
+            margin-top: 15px;
+        }
+        section {
+            margin-bottom: 30px;
+        }
+        h2 {
+            color: #333;
+            border-bottom: 2px solid #FF0000;
+            padding-bottom: 5px;
+        }
     </style>
 </head>
 <body>
-    <h1>Pengumpulan Tugas YouTube</h1>
-    <p>Nama: Deni Nugraha Solihin<br>
-    NPM: 2413025071<br>
-    Kelas: PTI 2024 A</p>
+    <header>
+        <h1>Halo, Saya [Nama Anda]</h1>
+        <img src="foto-profil.jpg" alt="Foto Saya" width="150">
+    </header>
 
-    <div class="tugas">
-        <h3>Tugas 1</h3>
-        <p>Deskripsi: [Deskripsi singkat tugas]</p>
-        <a href="https://youtu.be/[link1]" class="link" target="_blank">Link YouTube Tugas 1</a>
-    </div>
+    <section>
+        <h2>Tentang Saya</h2>
+        <p>Saya seorang web developer pemula.</p>
+    </section>
 
-    <div class="tugas">
-        <h3>Tugas 2</h3>
-        <p>Deskripsi: [Deskripsi singkat tugas]</p>
-        <a href="https://youtu.be/[link2]" class="link" target="_blank">Link YouTube Tugas 2</a>
-    </div>
+    <section>
+        <h2>Pengumpulan Tugas YouTube</h2>
+        <p>Nama: [Nama Lengkap]<br>
+        NIM: [Nomor Induk Mahasiswa]<br>
+        Kelas: [Nama Kelas]</p>
 
-    <div class="tugas">
-        <h3>Tugas 3</h3>
-        <p>Deskripsi: [Deskripsi singkat tugas]</p>
-        <a href="https://youtu.be/[link3]" class="link" target="_blank">Link YouTube Tugas 3</a>
-    </div>
+        <div class="tugas">
+            <h3>Tugas 1</h3>
+            <p>Deskripsi: [Deskripsi singkat tugas]</p>
+            <a href="https://youtu.be/[link1]" class="link" target="_blank">Link YouTube Tugas 1</a>
+        </div>
 
-    <div class="tugas">
-        <h3>Tugas 4</h3>
-        <p>Deskripsi: [Deskripsi singkat tugas]</p>
-        <a href="https://youtu.be/[link4]" class="link" target="_blank">Link YouTube Tugas 4</a>
-    </div>
+        <div class="tugas">
+            <h3>Tugas 2</h3>
+            <p>Deskripsi: [Deskripsi singkat tugas]</p>
+            <a href="https://youtu.be/[link2]" class="link" target="_blank">Link YouTube Tugas 2</a>
+        </div>
 
-    <div class="tugas">
-        <h3>Tugas 5</h3>
-        <p>Deskripsi: [Deskripsi singkat tugas]</p>
-        <a href="https://youtu.be/[link5]" class="link" target="_blank">Link YouTube Tugas 5</a>
-    </div>
+        <div class="tugas">
+            <h3>Tugas 3</h3>
+            <p>Deskripsi: [Deskripsi singkat tugas]</p>
+            <a href="https://youtu.be/[link3]" class="link" target="_blank">Link YouTube Tugas 3</a>
+        </div>
 
-    <div class="tugas">
-        <h3>Tugas 6</h3>
-        <p>Deskripsi: [Deskripsi singkat tugas]</p>
-        <a href="https://youtu.be/[link6]" class="link" target="_blank">Link YouTube Tugas 6</a>
-    </div>
+        <div class="tugas">
+            <h3>Tugas 4</h3>
+            <p>Deskripsi: [Deskripsi singkat tugas]</p>
+            <a href="https://youtu.be/[link4]" class="link" target="_blank">Link YouTube Tugas 4</a>
+        </div>
+
+        <div class="tugas">
+            <h3>Tugas 5</h3>
+            <p>Deskripsi: [Deskripsi singkat tugas]</p>
+            <a href="https://youtu.be/[link5]" class="link" target="_blank">Link YouTube Tugas 5</a>
+        </div>
+
+        <div class="tugas">
+            <h3>Tugas 6</h3>
+            <p>Deskripsi: [Deskripsi singkat tugas]</p>
+            <a href="https://youtu.be/[link6]" class="link" target="_blank">Link YouTube Tugas 6</a>
+        </div>
+    </section>
 
     <footer style="text-align: center; margin-top: 30px; color: #666;">
         <p>&copy; 2023 [Nama Anda]</p>
