--- a/index.html
+++ b/index.html
@@ -70,60 +70,59 @@
     <!-- Bagian Foto Profil & Data Diri -->
     <header>
         <img src="foto-profil.jpg" alt="Foto Profil" class="profile-img">
-        <h1>[Nama Lengkap]</h1>
-        <p class="subtitle">NIM: [Nomor Induk Mahasiswa]</p>
-        <p class="subtitle">Kelas: [Nama Kelas]</p>
+        <h1>Deni Nugraha Solihin</h1>
+        <p class="subtitle">NPM: 2413025071</p>
+        <p class="subtitle">Kelas: PTI A 2024</p>
     </header>
 
     <!-- Bagian Tentang Saya -->
     <section>
         <h2>Tentang Saya</h2>
-        <p>Saya seorang web developer pemula yang sedang belajar HTML, CSS, dan JavaScript. Saya memiliki minat dalam pengembangan front-end dan desain web.</p>
+        <p>Saya Seorang Mahasiswa Universitas Lampung Angkatan 2024, Fakultas Keguruan dan Ilmu Pendidikan, Jurusan Pendidikan Matematika dan Ilmu Pengetahuan Alam, Program Studi Pendidikan Teknologi Informasi.</p>
     </section>
 
     <!-- Bagian Daftar Tugas YouTube -->
     <section>
-        <h2>Pengumpulan Tugas YouTube</h2>
+        <h2>Pengumpulan Tugas</h2>
         
         <div class="tugas">
-            <h3>Tugas 1</h3>
-            <p>Deskripsi: [Deskripsi singkat tugas]</p>
-            <a href="https://youtu.be/[link1]" class="link" target="_blank">Link YouTube Tugas 1</a>
+            <h3>Tugas</h3>
+            <p>Judul: Tokoh Perintis Grafika Komputer</p>
+            <a href="https://youtu.be/jxcE-tML7bk?si=euhJllK0B0SsxTXJ" class="link" target="_blank">Klik disini</a>
         </div>
 
         <div class="tugas">
-            <h3>Tugas 2</h3>
-            <p>Deskripsi: [Deskripsi singkat tugas]</p>
-            <a href="https://youtu.be/[link2]" class="link" target="_blank">Link YouTube Tugas 2</a>
+            <h3>Tugas</h3>
+            <p>Judul: Algoritma Pembentukan Garis</p>
+            <a href="https://youtube.com/shorts/gdsltaQHBdc?si=KavINCzO13x5cI5x" class="link" target="_blank">Klik disini</a>
         </div>
 
         <div class="tugas">
-            <h3>Tugas 3</h3>
-            <p>Deskripsi: [Deskripsi singkat tugas]</p>
-            <a href="https://youtu.be/[link3]" class="link" target="_blank">Link YouTube Tugas 3</a>
+            <h3>Tugas</h3>
+            <p>Judul: Kuis 1 Persamaan Misteri</p>
+           <a href="https://youtube.com/shorts/gdsltaQHBdc?si=KavINCzO13x5cI5x" class="link" target="_blank">Klik disini</a>
+        </div>
+        <div class="tugas">
+            <h3>Tugas</h3>
+            <p>Judul: Kuis 2 Transformasi 2D</p>
+            <a href="https://youtu.be/T4IRG3xo9jg?si=5PWSuczHDE2Z8fpc" class="link" target="_blank">Klik disini</a>
         </div>
 
         <div class="tugas">
-            <h3>Tugas 4</h3>
-            <p>Deskripsi: [Deskripsi singkat tugas]</p>
-            <a href="https://youtu.be/[link4]" class="link" target="_blank">Link YouTube Tugas 4</a>
+            <h3>Tugas</h3>
+            <p>Judul: Kuis 3 Clipping Algorithm</p>
+            <a href="https://youtu.be/p0l_WwvnkKQ?si=oJce2r3POUq6DoKC" class="link" target="_blank">Klik Disini</a>
         </div>
 
         <div class="tugas">
-            <h3>Tugas 5</h3>
-            <p>Deskripsi: [Deskripsi singkat tugas]</p>
-            <a href="https://youtu.be/[link5]" class="link" target="_blank">Link YouTube Tugas 5</a>
-        </div>
-
-        <div class="tugas">
-            <h3>Tugas 6</h3>
-            <p>Deskripsi: [Deskripsi singkat tugas]</p>
-            <a href="https://youtu.be/[link6]" class="link" target="_blank">Link YouTube Tugas 6</a>
+            <h3>Tugas</h3>
+            <p>Judul: Kuis 4 Polygon Clipping Algorithm</p>
+            <a href="https://youtu.be/tvLb7CYzCrk?si=0rvSGqvGFco9HfMX" class="link" target="_blank">Klik disini</a>
         </div>
     </section>
 
     <footer>
-        <p>&copy; 2023 [Nama Anda]</p>
+        <p>&copy; 2025 Deni Nugraha Solihin</p>
     </footer>
 </body>
 </html>
