--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="tugas">
             <h3>Tugas</h3>
             <p>Judul: Kuis 1 Persamaan Misteri</p>
-           <a href="https://youtube.com/shorts/gdsltaQHBdc?si=KavINCzO13x5cI5x" class="link" target="_blank">Klik disini</a>
+           <a href="https://youtu.be/yWhbPHqXPZo?si=hXKC3Ryoqy-lvKGf" class="link" target="_blank">Klik disini</a>
         </div>
         <div class="tugas">
             <h3>Tugas</h3>
