--- a/index.html
+++ b/index.html
@@ -99,6 +99,18 @@
 
         <div class="tugas">
             <h3>Tugas</h3>
+            <p>Judul: Algoritma Pembentukan Lingkaran</p>
+            <a href="https://youtu.be/760tYxP06Bs?si=yTi-5ZHS6ObVKYUr" class="link" target="_blank">Klik disini</a>
+        </div>
+
+          <div class="tugas">
+            <h3>Tugas</h3>
+            <p>Judul: Algoritma Pembentukan Kurva</p>
+            <a href="https://youtu.be/g6IDxCWKsGU?si=4x7VtM3AwzlCRCjQ" class="link" target="_blank">Klik disini</a>
+        </div>
+
+        <div class="tugas">
+            <h3>Tugas</h3>
             <p>Judul: Kuis 1 Persamaan Misteri</p>
            <a href="https://youtu.be/yWhbPHqXPZo?si=hXKC3Ryoqy-lvKGf" class="link" target="_blank">Klik disini</a>
         </div>
@@ -107,7 +119,7 @@
             <p>Judul: Kuis 2 Transformasi 2D</p>
             <a href="https://youtu.be/T4IRG3xo9jg?si=5PWSuczHDE2Z8fpc" class="link" target="_blank">Klik disini</a>
         </div>
-
+        
         <div class="tugas">
             <h3>Tugas</h3>
             <p>Judul: Kuis 3 Clipping Algorithm</p>
